--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.97"
+tokio = { version = "1.44.2", features = ["full"] }
+clap = { version = "4.5", features = ["derive", "env"] }
