--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 anyhow = "1.0.97"
 tokio = { version = "1.44.2", features = ["full"] }
 clap = { version = "4.5", features = ["derive", "env"] }
+bytes = "1.10.1"
+bincode = { version = "2.0.1" }
