--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1.44.2", features = ["full"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 bytes = "1.10.1"
 bincode = { version = "2.0.1" }
+rand = "0.8"
