--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5", features = ["derive", "env"] }
 bytes = "1.10.1"
 bincode = { version = "2.0.1" }
 rand = "0.8"
+murmur3 = { version = "0.5" }
