--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bincode = { version = "2.0.1" }
 rand = "0.8"
 uuid = { version = "1", features = ["v4"] }
 murmur3 = "0.5"
+tracing = "0.1.44"
 
 [dev-dependencies]
 tempfile = "3"
